fix: 修复联调分页与 Milvus 检索链路